src/test/ui/typeck/issue-84768.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-84768.rs:7:11
   |
LL |     <F as FnOnce(&mut u8)>::call_once(f, 1)
   |           ^^^^^^^^^^^^^^^ associated type not allowed here

error[E0308]: mismatched types
  --> $DIR/issue-84768.rs:7:42
   |
LL |     <F as FnOnce(&mut u8)>::call_once(f, 1)
   |                                          ^ expected tuple, found integer
   |
   = note: expected tuple `(&mut u8,)`
               found type `{integer}`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0229, E0308.
For more information about an error, try `rustc --explain E0229`.
